# dummyauth

./: .gitignore  Cargo.toml  deno.json  vite.config.ts
src/: assets.rs  main.rs
views/: app.html  home.html
