[package]
name = "dummyauth"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8" }
tokio = { version = "1.49.0", features = ["full"] }
minijinja = { version = "2.15.1", features = ["loader"] }
serde = { version = "1.0.228", features = ["derive"] }
tower-http = { version = "0.6.8", features = ["fs"] }
tower = "0.5.3"
serde_json = "1.0.149"
